--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jasmine": "~5.1.0",
     "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.1.0",
+    "javascript-obfuscator": "^4.1.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
