--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "deploy": "ng build --base-href=/ --output-path=dist/PersonalWebsite && npx gh-pages -d dist/PersonalWebsite",
     "test": "ng test"
   },
   "private": true,
@@ -35,6 +36,7 @@
     "@types/aos": "^3.0.7",
     "@types/jasmine": "~5.1.0",
     "angular-cli-ghpages": "^2.0.3",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~5.1.0",
     "javascript-obfuscator": "^4.1.1",
     "karma": "~6.4.0",
